# Weather_Reporter

./: .gitignore  CMakeLists.txt  README.md  config.json
libs/: CMakeLists.txt  Config.cpp  Config.h  Interface.cpp  Interface.h  Weather.cpp  Weather.h
